--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron-reloader": "^1.0.1"
   },
   "dependencies": {
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "jquery": "^3.5.1"
   }
 }
